chore: add gitleaks pre-commit hook; block secrets from being committed locally
